@@ -1,6 +1,13 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2021-04-13 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Add CloudI Service API services_status process identifiers in
+      pids_erlang and pids_os lists
+    * Add cloudi_service_api_requests JSON support for
+      services_status pids_erlang and pids_os data
+
 2021-04-12 Michael Truog   <mjtruog at protonmail dot com>
 
     * Add cloudi_service_filesystem use_expires argument
